fixed styling with filter on mobile

--- a/themes/storefront-child/sass/style.scss
+++ b/themes/storefront-child/sass/style.scss
@@ -330,7 +330,20 @@ p + h2 {
   max-width: 260px;
 
   &.visible {
-    max-height: calc(100% - 95px);
+    width      : 100%;
+    padding    : 30px;
+    max-height : calc(100vh - 68px);
+
+    #lcgc-toggle-filter {
+      top              : 0;
+      color            : #fff;
+      bottom           : auto;
+      z-index          : 999;
+      position         : fixed;
+      font-weight      : bold;
+      border-bottom    : 1px solid #ccc;
+      background-color : #7286c3;
+    }
   }
 
   @include screen-size(md) {
